# ProjectUltra

./: .gitignore  CMakeLists.txt  Claude.md  LICENSE  README.md  sim_recording.f32
docs/: ADDING_NEW_WAVEFORM.md  AUDIO_SYSTEM.md  BUILD_SYSTEM.md  CFO_CORRECTION_FLOW.md  CHANGELOG.md  CONFIGURATION_SYSTEM.md  DUAL_CHIRP_CFO_ANALYSIS.md  GIT_WORKFLOW.md  GUI_ARCHITECTURE.md  INVARIANTS.md  KNOWN_BUGS.md  MODEM_ENGINE_ARCHITECTURE.md  PROTOCOL_V2.md  REFACTOR_PROGRESS.md  TESTING_METHODOLOGY.md
include/ultra/: adaptive_modem.hpp  arq.hpp  dsp.hpp  fec.hpp  logging.hpp  modem.hpp  ofdm.hpp  otfs.hpp  types.hpp
packaging/: README.md  package_linux.sh  package_macos.sh  package_windows.bat
scripts/: test_multi_cw.sh
src/: main.cpp
src/arq/: arq_controller.cpp
src/dsp/: fft.cpp  filters.cpp  resampler.cpp
src/fec/: codec_interface.hpp  ldpc_decoder.cpp  ldpc_encoder.cpp
src/framing/: frame_builder.cpp  frame_parser.cpp
src/fsk/: fsk.hpp  mfsk.hpp
src/gui/: adaptive_mode.cpp  adaptive_mode.hpp  app.cpp  app.hpp  audio_engine.cpp  audio_engine.hpp  main_gui.cpp  modem_engine.cpp  modem_engine.hpp  simulation.cpp  simulation.hpp
src/gui/modem/: modem_carrier_sense.cpp  modem_engine.cpp  modem_engine.hpp  modem_mode.cpp  modem_rx.cpp  modem_rx_constants.hpp  modem_rx_decode.cpp  modem_types.hpp  rx_pipeline.cpp  rx_pipeline.hpp  waveform_state.hpp
src/gui/widgets/: constellation.cpp  constellation.hpp  controls.cpp  controls.hpp  file_browser.cpp  file_browser.hpp  settings.cpp  settings.hpp  status.cpp  status.hpp  waterfall.cpp  waterfall.hpp
src/modem/: modem.cpp
src/ofdm/: adaptive_modem.cpp  channel_equalizer.cpp  channel_estimator.cpp  demodulator.cpp  demodulator_constants.hpp  demodulator_impl.hpp  modulator.cpp  ofdm_sync.cpp  otfs.cpp  soft_demap.hpp
src/otfs/: otfs.cpp
src/protocol/: arq.cpp  arq.hpp  arq_interface.cpp  arq_interface.hpp  compression.cpp  compression.hpp  connection.cpp  connection.hpp  connection_handlers.cpp  file_transfer.cpp  file_transfer.hpp  frame.cpp  frame.hpp  frame_v2.cpp  frame_v2.hpp  protocol_engine.cpp  protocol_engine.hpp  selective_repeat_arq.cpp  selective_repeat_arq.hpp
src/psk/: dpsk.hpp  multi_carrier_dpsk.hpp
src/sim/: hf_channel.hpp  loopback_test.cpp
src/sync/: chirp_sync.hpp  sync_interface.hpp  synchronizer.cpp
src/waveform/: mc_dpsk_waveform.cpp  mc_dpsk_waveform.hpp  ofdm_chirp_waveform.cpp  ofdm_chirp_waveform.hpp  ofdm_cox_waveform.cpp  ofdm_cox_waveform.hpp  waveform_factory.cpp  waveform_factory.hpp  waveform_interface.hpp
tests/: CMakeLists.txt  analyze_llrs.cpp  analyze_multi.cpp  benchmark_itu_r.cpp  benchmark_milstd.cpp  benchmark_otfs.cpp  check_parity_t210.cpp  check_probe.cpp  compare_parity.cpp  diagnose_correlation_detail.cpp  diagnose_sync_offset.cpp  find_encoded.cpp  find_info.cpp  find_test3.cpp  profile_correlation.cpp  regression_matrix.sh  test_adaptive_link.cpp  test_adaptive_mode.cpp  test_audio_basic.cpp  test_basic_ofdm.cpp  test_carrier_direct.cpp  test_cli_approach.cpp  test_comprehensive_modem.cpp  test_dqpsk_llr_audit.cpp  test_encode.cpp  test_encode_decode.cpp  test_fft.cpp  test_frame_v2.cpp  test_frame_v2_modem.cpp  test_freq_offset.cpp  test_interleaver.cpp  test_layers.cpp  test_ldpc_audit.cpp  test_mode_change.cpp  test_modem_loopback.cpp  test_multiblock.cpp  test_multiblock_ldpc.cpp  test_ofdm.cpp  test_otfs.cpp  test_protocol.cpp  (+9 more)
tests/data/: f3_fresh_recording.raw  f6_hardware_recording.f32  f6_hardware_recording.raw  ofdm_deadbeef_hardware_100pct.f32  probe_hardware_recording.f32  probe_hardware_recording.raw  probe_ldpc_fixed_20260118.f32  probe_ldpc_mac_2026-01-18.f32  test_connect_data_sequence.f32  v2_connect_3cw_hardware.f32  v2_connect_marker_index_verified.f32
tools/: audio_loopback_test  audio_loopback_test.cpp  channel_test.cpp  cli_simulator.cpp  generate_test_signal.cpp  profile_acquisition.cpp  test_1024fft_minimal.cpp  test_all_waveforms_hf.cpp  test_coherent_quick.cpp  test_dpsk_comprehensive.cpp  test_dpsk_performance.cpp  test_dpsk_snr.cpp  test_dpsk_speed_limits.cpp  test_dpsk_sync.cpp  test_dqpsk_comparison.cpp  test_dqpsk_hf.cpp  test_dqpsk_pattern_debug.cpp  test_dqpsk_rates.cpp  test_dqpsk_trace.cpp  test_dqpsk_varying.cpp  test_first_symbol_debug.cpp  test_hf_modem.cpp  test_hf_modem_debug.cpp  test_hf_reality.cpp  test_iwaveform.cpp  test_lowsnr_sync.cpp  test_mc_dpsk.cpp  test_mc_dpsk_frame.cpp  test_mfsk_sync.cpp  test_mode_snr.cpp  test_modem_engine_loopback.cpp  test_nvis_bits.cpp  test_nvis_carrier.cpp  test_nvis_compare.cpp  test_nvis_data.cpp  test_nvis_debug.cpp  test_nvis_mode.cpp  test_ofdm_chirp_basic.cpp  test_ofdm_chirp_cfo.cpp  test_ofdm_chirp_pilots.cpp  (+9 more)
